Added a dist folder which will contain the library that can be used in the browser

--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.2",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "webpack-cli": "^6.0.1"
   }
 }
